Flask application plus swagger
Flask application plus swagger plus requirements.
